add a sort of app rendering thing